--- a/part4/4-1.2.html
+++ b/part4/4-1.2.html
@@ -9,9 +9,9 @@
   <div id="root">
     <table>
       <tbody>
-        <row></row>
-        <row></row>
-        <row></row>
+        <tr is="row"></tr>
+        <tr is="row"></tr>
+        <tr is="row"></tr>
       </tbody>
     </table>
   </div>
