--- a/part4/4-2.2.html
+++ b/part4/4-2.2.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <div id="root">
-    <counter count="1"></counter>
-    <counter :count="2"></counter>
+    {{obj.a}}
+    <button @click="change">click</button>
+    <counter :count="obj"></counter>
+    <counter :count="obj"></counter>
   </div>
 
   <script>
@@ -16,20 +18,34 @@
       props: ['count'],
       data(){
         return {
-          number: this.count
+          childObj: this.count
         }
       },
-      template: "<div @click='addCount'>hello world{{number}}</div>",
+      template: "<div @click='childChange'>hello world{{childObj.a}}</div>",
       methods: {
-        addCount(){
-          this.number++
+        childChange(){
+          // this.childObj = {a: 4};  //这个时候只会改变当前这个子组件中的数据
+          // this.childObj.a = 4; //因为是引用，所以另一个子组件也会变化, 父组件也会变化
+          // this.count = {a:4} 这种因为修改的父组件传递进来的数据，回报错
+          console.log(this.count);
         }
       }
+
     };
     var vm = new Vue({
       el: '#root',
       components: {
         counter
+      },
+      data: {
+        obj: {
+          a: 1
+        }
+      },
+      methods: {
+        change(){
+          this.obj.a = 2;
+        }
       }
     })
 
