--- a/part4/4-2.3.html
+++ b/part4/4-2.3.html
@@ -7,44 +7,38 @@
 </head>
 <body>
   <div id="root">
-    {{obj.a}}
-    <button @click="change">click</button>
-    <counter :count="obj"></counter>
-    <counter :count="obj"></counter>
+    {{total}}
+    <counter :count="2" @change="change"></counter>
+    <counter :count="3" @change="change"></counter>
   </div>
 
   <script>
     var counter = {
       props: ['count'],
+      template: "<div @click='handleClick'>hello world{{number}}</div>",
       data(){
         return {
-          childObj: this.count
+          number: this.count
         }
       },
-      template: "<div @click='childChange'>hello world{{childObj.a}}</div>",
       methods: {
-        childChange(){
-          // this.childObj = {a: 4};  //这个时候只会改变当前这个子组件中的数据
-          // this.childObj.a = 4; //因为是引用，所以另一个子组件也会变化, 父组件也会变化
-          // this.count = {a:4} 这种因为修改的父组件传递进来的数据，回报错
-          console.log(this.count);
+        handleClick(){
+          this.number += 2;
+          this.$emit('change', 2)
         }
       }
-
-    };
+    }
     var vm = new Vue({
       el: '#root',
       components: {
         counter
       },
       data: {
-        obj: {
-          a: 1
-        }
+        total: 5
       },
       methods: {
-        change(){
-          this.obj.a = 2;
+        change(value){
+          this.total += value
         }
       }
     })
