--- a/travel/index.html
+++ b/travel/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>traval</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minium-scale=1.0,maxinum-scale=1.0,user-scalable=no">
+    <title>travel</title>
   </head>
   <body>
     <div id="app"></div>
