--- a/part7-vue-router/2.html
+++ b/part7-vue-router/2.html
@@ -9,41 +9,49 @@
   <script src="vue-router.js"></script>
 
   <div id="app">
-    <h1>hello word</h1>
-    <div>
-      <router-link to="/bar/we212">to bar</router-link>
-      <router-link to="/foo">to foo</router-link>
-    </div>
-    <router-view></router-view>
+    <p>
+    <router-link to="/user/foo">/user/foo</router-link>
+    <router-link to="/user/foo/profile">/user/foo/profile</router-link>
+    <router-link to="/user/foo/posts">/user/foo/posts</router-link>
+  </p>
+  <router-view></router-view>
   </div>
 
   <script>
-    var Bar = {
+  const User = {
       template: `
-        <div>
-          <p>this is bar{{$route.params.id}}</p>
-          <router-link></router-link>
+        <div class="user">
+          <h2>User {{ $route.params.id }}</h2>
+          <router-view></router-view>
         </div>
       `
     }
 
-    var Foo = {
-      template: '<p>this is foo</p>'
-    }
+    const UserHome = { template: '<div>Home</div>' }
+    const UserProfile = { template: '<div>Profile</div>' }
+    const UserPosts = { template: '<div>Posts</div>' }
 
-    var routes = [
-      {path: '/bar/:id', component: Bar},
-      {path: '/foo', component: Foo}
-    ]
+    const router = new VueRouter({
+      routes: [
+        { path: '/user/:id', component: User,
+          children: [
+            // UserHome will be rendered inside User's <router-view>
+            // when /user/:id is matched
+            { path: '', component: UserHome },
+            
+            // UserProfile will be rendered inside User's <router-view>
+            // when /user/:id/profile is matched
+            { path: 'profile', component: UserProfile },
 
-    var router = new VueRouter({
-      routes
+            // UserPosts will be rendered inside User's <router-view>
+            // when /user/:id/posts is matched
+            { path: 'posts', component: UserPosts }
+          ]
+        }
+      ]
     })
 
-    var vm = new Vue({
-      el: '#app',
-      router
-    })
+    const app = new Vue({ router }).$mount('#app')
   </script>
 
 
